# zec-issuance-plots

./: .gitignore  Cargo.toml
.cargo/: audit.toml
src/: consts.rs  downsample.rs  halving.rs  idealtime.rs  main.rs  plot.rs  plotsdir.rs  subsidy.rs  timebuckets.rs  units.rs
src/downsample/: tests.rs
src/plot/: csv.rs
src/subsidy/: btc.rs  nu5.rs  tailem.rs  zpf.rs
src/subsidy/nu5/: tests.rs
src/timebuckets/: tests.rs
src/units/: halvings.rs  height.rs  ratio.rs  seconds.rs  zat.rs  zec.rs
