[package]
name = "zec-issuance-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
debug = true

[dependencies]
chrono = "0.4.19"
once_cell = "1.12.0"
plotters = "0.3.1"

[dev-dependencies]
test-case = "*"
